--- a/project6.html
+++ b/project6.html
@@ -4,7 +4,7 @@
 
   <head>
   
-  <link href="<style.css>" rel="<stylesheet>">
+  <link href="style.css" rel="stylesheet">
   
  <title> My First Web Page </title>
                   
